editor-components/coming-soon/coming-soon2/coming-soon2.module.scss
@use "../../../composer-base-components/base/utitilities/viewports.module.scss" as *;
.container {
  height: 100vh;
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  .max-content {
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    .content {
      width: 60%;
      display: flex;
      height: 90%;
      gap: var(--composer-gap-xl);
      &.without-right{
        align-items: center;
        .left-side{
          .left-text{
            width: 100%;
            align-items: center;
            .title{
              text-align: center;
            }
          }
        }
      }
      .left-side {
        flex: 2;
        display: flex;
        flex-direction: column;
        align-items: end;
        .left-text {
          width: fit-content;
          display: flex;
          flex-direction: column;
          gap: var(--composer-gap-lg);

          .counter {
            width: fit-content;
            border: 3px solid var(--composer-primary-color);
            border-radius: calc(var(--composer-border-radius-xl) * 6);
            padding: var(--composer-gap-xl);
            .counter-content{
                display: flex;
                gap: var(--composer-gap-xl);
                .days-container, .hours-container, .minutes-container, .seconds-container{
                    display: flex;
                    flex-direction: column;
                    align-items: center;
                    justify-content: center;
                    gap: var(--composer-gap-sm);
                    .days-count, .hours-count, .minutes-count, .seconds-count{
                        color: var(--composer-primary-color);
                        margin: 0px;
                        display: flex;
                        flex-direction: column;
                        gap: var(--composer-gap-md);
                        font-size: 4rem;
                    }
                    .days-text, .hours-text, .minutes-text, .seconds-text{
                        color: var(--composer-primary-color);
                    }
                }
            }
          }
          .title {
            font-size: 7rem;
            width: 100%;
            margin: 0;
            color: rgb(44, 44, 44);
            &.without-image{
                color: var(--composer-font-color-primary);
            }
          }
        }
      }
      .right-side {
        flex: 1;
        height: 100%;
        align-items: end;
        justify-content: end;
        display: flex;

        .home {
          width: 300px;
          height: 300px;
          background-color: var(--composer-primary-color);
          border-radius: 50%;
          display: flex;
          justify-content: center;
          align-items: center;
          padding: var(--composer-gap-xl);
          cursor: pointer;
          overflow: hidden;

          .home-text {
            text-align: center;
            font-size: 2rem;
            color: var(--composer-font-color-secondary);
          }
        }
      }
    }
  }
}
@container (max-width: #{$composer-tablet-width}) {
  .container {
    .max-content {
      .content {
        width: 100%;
        justify-content: space-between;
        height: 60%;
        &.without-right{
          .left-side{
            width: 100%;
          }
        }
        .left-side {
          flex: unset;
          .left-text {
            .title {
              font-size: 6rem;
            }
          }
        }
        .right-side {
          flex: unset;
          .home {
            height: 200px;
            width: 200px;
            .home-text {
              font-size: 1.5rem;
            }
          }
        }
      }
    }
  }
}
@container (max-width: #{$composer-phone-width}) {
  .container {
    .max-content {
      .content {
        width: 100%;
        justify-content: center;
        flex-direction: column;
        height: 70%;
        .left-side {
          flex: unset;
          align-items: start;
          .left-text {
            width: 100%;
            align-items: center;
            .counter{
                padding:var(--composer-gap-lg) var(--composer-gap-md);
                .counter-content{
                    gap: var(--composer-gap-md);
                    .days-container, .hours-container, .minutes-container, .seconds-container{
                        .days-count, .hours-count, .minutes-count, .seconds-count{
                            font-size: 2.5rem;
                        }

                    }
                }
            }
            .title {
              font-size: 5rem;
              text-align: center;
            }
          }
        }
        .right-side {
          flex: unset;
          justify-content: center;
          .home {
            height: 200px;
            width: 200px;
          }
        }
      }
    }
  }
}

