fix: zero time min width and when counter is zero after chaing, it visible immediately

--- a/editor-components/coming-soon/coming-soon2/coming-soon2.module.scss
+++ b/editor-components/coming-soon/coming-soon2/coming-soon2.module.scss
@@ -49,8 +49,9 @@
                     display: flex;
                     flex-direction: column;
                     align-items: center;
-                    justify-content: center;
+                    justify-content: center;                    
                     gap: var(--composer-gap-sm);
+                    min-width: 55px;
                     .days-count, .hours-count, .minutes-count, .seconds-count{
                         color: var(--composer-primary-color);
                         margin: 0px;
